scripts/bash/iptables
*filter

# Allow postgesql (tesd)
-A INPUT -p tcp --dport 5432 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp --sport 5432 -m state --state ESTABLISHED -j ACCEPT

# Allow ETSU subnet
-A INPUT  -s 151.141.100.0/24 -j ACCEPT
-A OUTPUT -s 151.141.100.0/24 -j ACCEPT

# Allow all this server
-A INPUT  -s 50.62.78.132 -j ACCEPT
-A OUTPUT -s 50.62.78.132 -j ACCEPT
-A INPUT  -s 127.0.0.1 -j ACCEPT
-A OUTPUT -s 127.0.0.1 -j ACCEPT

# Allow SSH
-A INPUT  -i eth0 -p tcp --dport 2022 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 2022 -m state --state ESTABLISHED -j ACCEPT

# Set default chain policies
-P INPUT   DROP
-P FORWARD DROP

# Allow HTTP
-A INPUT  -i eth0 -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT

# Allow HTTPS
-A INPUT  -i eth0 -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT

# Allow DNS
-A INPUT  -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT  -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT

# prevent ddos
-A INPUT -p tcp --dport 80 -m limit --limit 25/minute --limit-burst 100 -j ACCEPT

# Log dropped packets
-N LOGGING
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP

COMMIT
